<resources>
    <string name="app_name">Budgee</string>

    <string name="login_button">Log in</string>

    <string name="home_icon">Home</string>
    <string name="assets">Assets</string>
    <string name="home_title">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="budget">Budget</string>
    <string name="history">History</string>

    <string name="assets_add_asset_type">Add Asset Type</string>
    <string name="assets_edit_asset_type_title">%s</string>
    <string name="edit_tab_name">Edit Tab Name</string>
    <string name="delete_tab">Delete Tab</string>
</resources>